@@ -182,22 +182,9 @@ plotFilterValues = function(fvalues, sort = "dec", n.show = 20L, feat.type.cols 
 #'
 #' @param fvalues [\code{\link{FilterValues}}]\cr
 #'   Filter values.
-#' @param sort [\code{character(1)}]\cr
-#'   Sort features like this.
-#'   \dQuote{dec} = decreasing, \dQuote{inc} = increasing, \dQuote{none} = no sorting.
-#'   Default is decreasing.
-#' @param n.show [\code{integer(1)}]\cr
-#'   Number of features (maximal) to show.
-#'   Default is 20.
 #' @param feat.type.cols [\code{logical(1)}]\cr
 #'   Colors for factor and numeric features.
 #'   \code{FALSE} means no colors.
-#'   Default is \code{FALSE}.
-#' @param interactive [\code{logical(1)}]\cr
-#'   Whether to use Shiny to visualize multiple filter methods.
-#'   If \code{TRUE} and \code{getFilterValues} was called with multiple methods,
-#'   then returns a Shiny application with a drop-down menu allowing the visualization
-#'   of said methods. If \code{FALSE} then a static \code{ggvis} plot is returned.
 #'   Default is \code{FALSE}.
 #' @template ret_ggv
 #' @export
@@ -205,24 +192,15 @@ plotFilterValues = function(fvalues, sort = "dec", n.show = 20L, feat.type.cols 
 #' fv = generateFilterValuesData(iris.task, method = "chi.squared")
 #' plotFilterValuesGGVIS(fv)
 #' }
-plotFilterValuesGGVIS = function(fvalues, sort = "dec", n.show = 20L, feat.type.cols = FALSE, interactive = FALSE) {
+plotFilterValuesGGVIS = function(fvalues, feat.type.cols = FALSE) {
   assertClass(fvalues, classes = "FilterValues")
-  assertChoice(sort, choices = c("dec", "inc", "none"))
   if (!(is.null(fvalues$method)))
     stop("fvalues must be generated by generateFilterValuesData, not getFilterValues, which is deprecated.")
 
-  n.show = asCount(n.show)
-
   data = fvalues$data
   methods = colnames(data[, -which(colnames(data) %in% c("name", "type")), drop = FALSE])
-  n.show = min(n.show, max(sapply(methods, function(x) sum(!is.na(data[[x]])))))
   data = reshape2::melt(data, id.vars = c("name", "type"), variable = "method")
 
-  if (sort != "none")
-    data = do.call(rbind, lapply(methods, function(x)
-      head(sortByCol(data[data$method == x, ], "value", (sort == "inc")), n.show)))
-
-  data$name = factor(data$name, levels = as.character(unique(data$name)))
   create_plot = function(data, feat.type.cols) {
     if (feat.type.cols)
       plt = ggvis::ggvis(data, ggvis::prop("x", as.name("name")),
@@ -238,44 +216,46 @@ plotFilterValuesGGVIS = function(fvalues, sort = "dec", n.show = 20L, feat.type.
     return(plt)
   }
 
-  add_title = function(vis, ..., x_lab = "", title = "") {
-    vis = ggvis::add_axis(vis, "x", title = x_lab)
-    vis = ggvis::add_axis(vis, "x", orient = "top", ticks = 0, title = title,
-                          properties = ggvis::axis_props(
-                              axis = list(stroke = "white"),
-                              labels = list(fontSize = 0)
-                          ), ...)
+  gen_plot_data = function(data, sort_type, value_column, factor_column, n_show) {
+    if (sort_type != "none")
+      data[[factor_column]] = factor(data[[factor_column]],
+                                     levels = data[[factor_column]][order(data[[value_column]],
+                                                                          decreasing = sort_type == "decreasing")])
+    data = head(data, n = n_show)
+    data[[factor_column]] = factor(data[[factor_column]]) ## drop unused factor levels
+    data
   }
 
-  if (length(unique(data$method)) == 1L) {
-    plt = create_plot(data, feat.type.cols)
-    plt = add_title(plt, x_lab = "",
-                    title = sprintf("%s (%i features), filter = %s",
-                                    fvalues$task.desc$id,
-                                    sum(fvalues$task.desc$n.feat),
-                                    unique(data$method)))
-    return(plt)
-  } else if (length(unique(data$method)) > 1L & interactive) {
-    ui = shiny::shinyUI(
-        shiny::pageWithSidebar(
-            shiny::headerPanel(sprintf("%s (%i features)", fvalues$task.desc$id, sum(fvalues$task.desc$n.feat))),
-            shiny::sidebarPanel(
-                shiny::selectInput("level_variable",
-                                   "choose a filter method",
-                                   unique(levels(data[["method"]])))
-            ),
-            shiny::mainPanel(
-                shiny::uiOutput("ggvis_ui"),
-                ggvis::ggvisOutput("ggvis")
-            )
-        ))
-    server = shiny::shinyServer(function(input, output) {
-      data_sub = shiny::reactive(data[which(data[["method"]] == input$level_variable), ])
-      plt = create_plot(data_sub, feat.type.cols)
-      ggvis::bind_shiny(plt, "ggvis", "ggvis_ui")
-    })
-    shiny::shinyApp(ui, server)
-  } else {
-    stop("If multiple filter methods are passed to getFilterValues interactive must be set to TRUE.")
-  }
+  header = shiny::headerPanel(sprintf("%s (%i features)", fvalues$task.desc$id, sum(fvalues$task.desc$n.feat)))
+  method_input = shiny::selectInput("level_variable", "choose a filter method",
+                                    unique(levels(data[["method"]])))
+  sort_input = shiny::radioButtons("sort_type", "sort features", c("increasing", "decreasing", "none"))
+  n_show_input = shiny::numericInput("n_show", "number of features to show",
+                                     value = sum(fvalues$task.desc$n.feat),
+                                     min = 1,
+                                     max = sum(fvalues$task.desc$n.feat),
+                                     step = 1)
+  ui = shiny::shinyUI(
+    shiny::pageWithSidebar(
+      header,
+      shiny::sidebarPanel(method_input, sort_input, n_show_input),
+      shiny::mainPanel(shiny::uiOutput("ggvis_ui"), ggvis::ggvisOutput("ggvis"))
+    )
+  )
+  server = shiny::shinyServer(function(input, output) {
+    plt = shiny::reactive(
+      create_plot(
+        data = gen_plot_data(
+          data[which(data[["method"]] == input$level_variable), ],
+          input$sort_type,
+          "value",
+          "name",
+          input$n_show
+        ),
+        feat.type.cols
+      )
+    )
+    ggvis::bind_shiny(plt, "ggvis", "ggvis_ui")
+  })
+  shiny::shinyApp(ui, server)
 }
